fix(studio): resolve runtime errors and build issues
- Fix Firebase initialization race condition by moving auth listener
- Update Content Security Policy (CSP) to allow WebAssembly and Stripe
- Fix type errors in AI and Firebase services
- Ensure applications build successfully

--- a/apps/studio/src/index.html
+++ b/apps/studio/src/index.html
@@ -5,6 +5,7 @@
     <title>studio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval'; connect-src 'self' https: ws: wss:; media-src 'self' https: data: blob:; img-src 'self' https: data: blob:;" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
